hp1cr1.out
  File "train_hypermorph.py", line 111
    inputs = (*inputs, hyp)
              ^
SyntaxError: invalid syntax
